<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Funny weather widget</string>
    <string name="location">Location</string>
    <string name="temperature">current temperature</string>
    <string name="date">last update date</string>
    <string name="defaultLocation">Moscow</string>
    <string name="defaultTemperature">20°</string>
    <string name="defaultTime">01.01.2024 12:00</string>
</resources>