<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Android.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Android.AppWidgetContainer">


    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/location"
        android:textAlignment="center"
        android:text="@string/defaultLocation"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/temperature"
        android:text="@string/defaultTemperature"
        android:textSize="42sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/date"
        android:textAlignment="center"
        android:text="@string/defaultTime"
        android:textSize="11sp" />

</RelativeLayout>